# color-grabber

./: README.md  bun.lockb  index.html  package.json
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
